# voice-game

./: .env.example  .gitignore  PRD.md  README.md  config.py  dungeon_map.json  main.py  player_state.json  pyproject.toml  requirements.txt  todo.txt  z.txt
.claude/: settings.local.json
ai/: intent_parser.py  mistral_client.py  narrator.py  prompts.py  stt_client.py  tts_client.py
audio/: audio_manager.py  deepgram_stt.py
data/: bosses.json  items.json  monsters.json
docs/: IMPLEMENTATION_PLAN_PHASE1.md  IMPLEMENTATION_PLAN_PHASE2.md  IMPLEMENTATION_PLAN_PHASE2_1.md  IMPLEMENTATION_PLAN_PHASE3.md  IMPLEMENTATION_PLAN_PHASE3_1.md
game/: combat.py  dungeon_map.py  game_controller.py  game_state.py  monster_ai.py
maps/: dungeon_map.json
scripts/: pregenerate_boss_audio.py
state/: game_state.json  game_state.tmp
ui/: game_view.py  main_window.py  map_panel.py  signals.py
