[project]
name = "voice-game"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepgram-sdk>=6.0.1",
    "elevenlabs>=2.37.0",
    "mistralai>=1.12.4",
    "numpy>=2.4.2",
    "openai>=2.24.0",
    "pyaudio>=0.2.14",
    "pygame>=2.6.1",
    "pyqt6==6.9.0",
    "python-dotenv>=1.2.1",
    "websockets>=16.0",
]
